src/main/java/com/example/demo/error/exception/DetailBuilder.java
package com.example.demo.error.exception;

public record DetailBuilder(ErrorCode errorCode, Object... fields) {
}
    